--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -25,13 +25,38 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-.logo {
+.logoWrapper {
+  position: relative;
+  display: inline-block;
+  margin-left: 20px;
+  width: max-content;
+  height: 3rem;
+}
+
+.logoTop,
+.logoBottom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   font-size: 2.5rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-weight: bold;
+  user-select: none;
+  cursor: default;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.logoBottom {
+  color: #00a6ff;
+  z-index: 0;
+}
+
+.logoTop {
   color: #7ee1ff;
-  flex-shrink: 0;
-  padding-left: 20px;
+  z-index: 1;
 }
 
 .navlinks {
@@ -166,5 +191,14 @@
 
   .hamburger {
     display: block;
+  }
+
+  .logoTop,
+  .logoBottom {
+    font-size: 1.4rem;
+  }
+
+  .logoWrapper {
+    margin-left: 5px;
   }
 }
